<resources>
    <string name="app_name">EleCentLife-</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_notif">Notif</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="alarm_time">Alarm Time:</string>
    <string name="breakfast_recommendation_time">Breakfast Recommendation Time:</string>
    <string name="motivational_quote_time">Motivational Quote Time:</string>
    <string name="schedule_reminder_time">Schedule Reminder Time:</string>
    <string name="textview">TextView</string>
    <string name="colon">:</string>
    <string name="error">error</string>
    <string name="save_changes">Save changes</string>
    <string name="casual_hangout_default_color">Casual Hangout Default Color:</string>
    <string name="meeting_default_color">Meeting Default Color:</string>
    <string name="other_default_color">Other Default Color:</string>
    <string name="deadline_default_color">Deadline Default Color:</string>
    <string name="work_school_default_color">Work/School Default Color:</string>
</resources>
